Add force option to GlassFinder Also if pre-assigned catalog name is not valid then lookup anyway